ARM: imx6ull-tarragon: Apply recommended config for USB cert
This also fixes some enumeration issues.

Signed-off-by: Stefan Wahren <stefan.wahren@i2se.com>

--- a/arch/arm/boot/dts/imx6ull-tarragon.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon.dtsi
@@ -584,5 +584,7 @@
 };
 
 &usbphy1 {
-	tx-d-cal = <0x5>; // FIXME
+	fsl,tx-cal-45-dn-ohms = <30>;
+	fsl,tx-cal-45-dp-ohms = <30>;
+	tx-d-cal = <0x7>;
 };
