usb: chipidea: Fix power_supply dependency
Signed-off-by: Stefan Wahren <stefan.wahren@i2se.com>

--- a/drivers/usb/chipidea/Kconfig
+++ b/drivers/usb/chipidea/Kconfig
@@ -15,6 +15,7 @@ if USB_CHIPIDEA
 config USB_CHIPIDEA_OF
 	tristate
 	depends on OF
+	select POWER_SUPPLY
 	default USB_CHIPIDEA
 
 config USB_CHIPIDEA_PCI
