--- a/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
@@ -159,13 +159,13 @@
 			>;
 	        };
 
-		pinctrl_gpio_motor: pinctrl_gpio_motorGrp { // modified
+		pinctrl_gpio_motor: pinctrl_gpio_motorGrp {
 			fsl,pins = <
 				MX6UL_PAD_LCD_DATA02__GPIO3_IO07	0x40017059
 				MX6UL_PAD_LCD_DATA03__GPIO3_IO08	0x40017059
 				MX6UL_PAD_LCD_DATA04__GPIO3_IO09	0x40017059
 				// EN_MOTOR_CAP_CHARGING removed MX6UL_PAD_LCD_DATA06__GPIO3_IO11	0x40017059
-				MX6UL_PAD_UART1_RTS_B__GPIO1_IO19	0x17059
+				MX6UL_PAD_UART1_RTS_B__GPIO1_IO19	0x17059 // modified
 				MX6UL_PAD_UART3_RX_DATA__GPIO1_IO25	0x17059
 			>;
         	};
