--- a/arch/arm/boot/dts/imx6ull-tarragon-master.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-master.dts
@@ -69,7 +69,7 @@
 	phy-supply = <&reg_dcdc_3v3>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
-	phy-reset-gpios = <&gpio5 6 GPIO_ACTIVE_HIGH>; // modified
+	phy-reset-gpios = <&gpio5 6 GPIO_ACTIVE_LOW>;
 	phy-reset-duration = <25>;
 	status = "okay";
 
