ARM: dts: imx6ull-tarragon: Temporay disable PWM fan on Master
Signed-off-by: Stefan Wahren <stefan.wahren@i2se.com>

--- a/arch/arm/boot/dts/imx6ull-tarragon-master.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-master.dts
@@ -5,6 +5,7 @@
 	model = "I2SE Tarragon Master";
 	compatible = "fsl,imx6ull-tarragon", "fsl,imx6ull";
 
+	/* Temporary disabled
 	fan0: pwm-fan {
 		compatible = "pwm-fan";
 		pwms = <&pwm7 0 40000 PWM_POLARITY_INVERTED>;
@@ -12,6 +13,7 @@
 		interrupt-parent = <&gpio5>;
 		interrupts = <1 IRQ_TYPE_EDGE_FALLING>;
 	};
+	*/
 };
 
 &adc1 {
