ARM: dts: imx6ull-tarragon: Remove CAN LED trigger
Signed-off-by: Stefan Wahren <stefan.wahren@i2se.com>

--- a/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
@@ -45,10 +45,9 @@
 			linux,default-trigger = "timer";
 		};
 
-		led2 {			/* CAN traffic */
+		led2 {
 			label = "evse:yellow:led2";
 			gpios = <&gpio3 15 GPIO_ACTIVE_HIGH>;
-			linux,default-trigger = "can0-rx";
 		};
 
 		led3 {			/* Heartbeat */
