--- a/arch/arm/boot/dts/imx6ull-tarragon-slave.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-slave.dts
@@ -5,7 +5,7 @@
 	model = "I2SE Tarragon Slave";
 	compatible = "fsl,imx6ull-tarragon", "fsl,imx6ull";
 
-	leds { // modified
+	leds {
 		compatible = "gpio-leds";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_debug_leds>;
@@ -33,7 +33,7 @@
 	status = "okay";
 };
 
-&ecspi2 { // keep
+&ecspi2 {
 	status = "okay";
 
 	qca7000_cp: ethernet@0 {
@@ -97,7 +97,7 @@
 	status = "okay";
 };
 
-&usdhc2 { // modified
+&usdhc2 {
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc2_4bit>;
 	pinctrl-1 = <&pinctrl_usdhc2_4bit_100MHz>;
