ARM: dts: imx6ull-tarragon: Switch eMMC to 8 bit bus width
In general this should be backward compatible by downgrading to 4 bit
on older boards.

Signed-off-by: Stefan Wahren <stefan.wahren@in-tech.com>

--- a/arch/arm/boot/dts/imx6ull-tarragon-mfg.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-mfg.dts
@@ -19,9 +19,9 @@
 	status = "okay";
 };
 
-&usdhc2 {
+&usdhc2 { // modified
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
-	pinctrl-0 = <&pinctrl_usdhc2_4bit>;
-	pinctrl-1 = <&pinctrl_usdhc2_4bit_100MHz>;
-	pinctrl-2 = <&pinctrl_usdhc2_4bit_200MHz>;
+	pinctrl-0 = <&pinctrl_usdhc2_8bit>;
+	pinctrl-1 = <&pinctrl_usdhc2_8bit_100MHz>;
+	pinctrl-2 = <&pinctrl_usdhc2_8bit_200MHz>;
 };
