--- a/arch/arm/boot/dts/imx6ull-tarragon-micro.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-micro.dts
@@ -69,11 +69,11 @@
 	status = "okay";
 };
 
-&usdhc2 {
+&usdhc2 { // modified
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
-	pinctrl-0 = <&pinctrl_usdhc2_4bit>;
-	pinctrl-1 = <&pinctrl_usdhc2_4bit_100MHz>;
-	pinctrl-2 = <&pinctrl_usdhc2_4bit_200MHz>;
+	pinctrl-0 = <&pinctrl_usdhc2_8bit>;
+	pinctrl-1 = <&pinctrl_usdhc2_8bit_100MHz>;
+	pinctrl-2 = <&pinctrl_usdhc2_8bit_200MHz>;
 	vmmc-supply = <&sw2_reg>;
 	mmc-pwrseq = <&emmc_pwrseq>;
 };
