ARM: dts: imx6ull-tarragon: Add second USB interface
This adds the second USB interface, but keep it disabled since it isn't
available on older boards.

Signed-off-by: Stefan Wahren <stefan.wahren@in-tech.com>

--- a/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
@@ -635,7 +635,17 @@
 	disable-over-current;
 };
 
+&usbotg2 { // new
+	disable-over-current;
+};
+
 &usbphy1 {
+	fsl,tx-cal-45-dn-ohms = <30>;
+	fsl,tx-cal-45-dp-ohms = <30>;
+	tx-d-cal = <0x7>;
+};
+
+&usbphy1 { // new
 	fsl,tx-cal-45-dn-ohms = <30>;
 	fsl,tx-cal-45-dp-ohms = <30>;
 	tx-d-cal = <0x7>;
