--- a/arch/arm/boot/dts/imx6ull-tarragon-slave.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-slave.dts
@@ -97,6 +97,10 @@
 	status = "okay";
 };
 
+&usbotg2 { // new
+	dr_mode = "host";
+};
+
 &usdhc2 { // modified
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc2_8bit>;
