--- a/arch/arm/boot/dts/imx6ull-tarragon-micro.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-micro.dts
@@ -69,11 +69,11 @@
 	status = "okay";
 };
 
-&usbotg2 { // new
+&usbotg2 {
 	dr_mode = "host";
 };
 
-&usdhc2 { // modified
+&usdhc2 {
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc2_8bit>;
 	pinctrl-1 = <&pinctrl_usdhc2_8bit_100MHz>;
