--- a/arch/arm/boot/dts/imx6ull-tarragon-master.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-master.dts
@@ -150,7 +150,7 @@
 
 &uart5 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_rs485_2>; // coupled
+	pinctrl-0 = <&pinctrl_rs485_2>;
 	status = "okay";
 };
 
@@ -169,11 +169,11 @@
 	status = "okay";
 };
 
-&usbotg2 { // new
+&usbotg2 {
 	dr_mode = "host";
 };
 
-&usdhc2 { // modified
+&usdhc2 {
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc2_8bit>;
 	pinctrl-1 = <&pinctrl_usdhc2_8bit_100MHz>;
