--- a/arch/arm/boot/dts/imx6ull-tarragon-mfg.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-mfg.dts
@@ -19,7 +19,7 @@
 	status = "okay";
 };
 
-&usdhc2 { // modified
+&usdhc2 {
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc2_8bit>;
 	pinctrl-1 = <&pinctrl_usdhc2_8bit_100MHz>;
