ARM: dts: imx6ull-tarragon: move usdhc to common dtsi
Signed-off-by: Michael Heimpold <michael.heimpold@in-tech.com>

--- a/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
@@ -658,6 +658,12 @@
 };
 
 &usdhc2 {
+	pinctrl-names = "default", "state_100mhz", "state_200mhz";
+	pinctrl-0 = <&pinctrl_usdhc2_8bit>;
+	pinctrl-1 = <&pinctrl_usdhc2_8bit_100MHz>;
+	pinctrl-2 = <&pinctrl_usdhc2_8bit_200MHz>;
+	vmmc-supply = <&sw2_reg>;
+	mmc-pwrseq = <&emmc_pwrseq>;
 	bus-width = <8>;
 	broken-cd;
 	non-removable;
