ARM: dts: imx6ull-tarragon: move dr_mode for usbotg1 to common dtsi
Signed-off-by: Michael Heimpold <michael.heimpold@in-tech.com>

--- a/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
@@ -637,6 +637,7 @@
 &usbotg1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usb &pinctrl_usb_pwr>;
+	dr_mode = "host";
 	power-active-high;
 	disable-over-current;
 };
