--- a/arch/arm/boot/dts/imx6ull-tarragon-slave.dts
+++ b/arch/arm/boot/dts/imx6ull-tarragon-slave.dts
@@ -1,3 +1,12 @@
+/*
+ * Copyright (C) 2018 I2SE GmbH
+ * Copyright (C) 2020 in-tech smart charging GmbH
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2 as
+ * published by the Free Software Foundation.
+ */
+
 #include "imx6ull-tarragon-common.dtsi"
 #include "imx6ull-tarragon-pmic.dtsi"
 
