ARM: dts: imx6ull: adjust pwm-cells for pwm7
but with <2>. This leads to the following warning when U-Boot
is compiled:

arch/arm/dts/imx6ull-tarragon-master.dtb: Warning (pwms_property):
    /pwm-fan:pwms: cell 3 is not a phandle reference
arch/arm/dts/imx6ull-tarragon-master.dtb: Warning (pwms_property):
    /pwm-fan: Missing property '#pwm-cells' in node
    /soc/aips-bus@2000000/ccm@20c4000 or bad phandle (referred from pwms[3])

Since we want to pass a 3rd parameter, we need to adjust this property for pwm7.

Signed-off-by: Michael Heimpold <michael.heimpold@in-tech.com>

--- a/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
@@ -604,6 +604,10 @@
 	pinctrl-0 = <&pinctrl_pwm_dig_in_ref>;
 };
 
+&pwm7 {
+	#pwm-cells = <3>;
+};
+
 &pwm8 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm_cp>;
