--- a/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
@@ -604,6 +604,12 @@
 };
 
 &usdhc2 { // modified
+	pinctrl-names = "default", "state_100mhz", "state_200mhz";
+	pinctrl-0 = <&pinctrl_usdhc2_4bit>;
+	pinctrl-1 = <&pinctrl_usdhc2_4bit_100MHz>;
+	pinctrl-2 = <&pinctrl_usdhc2_4bit_200MHz>;
+	mmc-pwrseq = <&emmc_pwrseq>;
+	vmmc-supply = <&sw2_reg>;
 	bus-width = <4>;
 	broken-cd;
 	non-removable;
