ARM: dts: imx6ull-tarragon: move uart stuff to common dtsi
Signed-off-by: Stefan Wahren <stefan.wahren@in-tech.com>

--- a/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
@@ -586,9 +586,19 @@
 	status = "okay";
 };
 
+&uart5 { // new
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_rs485_2>; // coupled
+};
+
 &uart6 { // new
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_stm32>;
+};
+
+&uart7 { // new
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_ext_uart>;
 };
 
 &usbotg1 { // keep
