--- a/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
+++ b/arch/arm/boot/dts/imx6ull-tarragon-common.dtsi
@@ -98,7 +98,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_qca7000_cp_spi>;
 	fsl,spi-num-chipselects = <1>;
-	cs-gpios = <&gpio1 29 0>;
+	cs-gpios = <&gpio1 29 GPIO_ACTIVE_HIGH>;
 };
 
 &ecspi4 { // new
@@ -107,7 +107,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_qca7000_mains_spi>;
 	fsl,spi-num-chipselects = <1>;
-	cs-gpios = <&gpio2 15 0>; // modified
+	cs-gpios = <&gpio2 15 GPIO_ACTIVE_HIGH>; // modified
 };
 
 &fec1 {
